--- a/styles/Contacts/Contacts.module.scss
+++ b/styles/Contacts/Contacts.module.scss
@@ -33,11 +33,12 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
+        gap: 32px;
         @include tablet {
             gap: 0;
             flex-direction: row;
         }
-        @include desktop{
+        @include desktop {
             gap: 54px;
         }
         margin-bottom: 70px;
@@ -60,14 +61,20 @@
             }
             a {
                 color: #707070;
-                font-size: 18px;
+                font-size: 16px;
+                @include desktop {
+                    font-size: 18px;
+                }
                 &:not(:last-child) {
                     margin-bottom: 12px;
                 }
             }
             p {
                 color: #707070;
-                font-size: 18px;
+                font-size: 16px;
+                @include desktop {
+                    font-size: 18px;
+                }
                 text-align: center;
                 line-height: 24px;
             }
