--- a/styles/Layout/Header.module.scss
+++ b/styles/Layout/Header.module.scss
@@ -216,6 +216,7 @@
                             @include desktop {
                                 display: block;
                                 gap: 0;
+                                border: 0;
                                 padding-bottom: 0;
                             }
                             .icon {
