--- a/styles/Layout/Footer.module.scss
+++ b/styles/Layout/Footer.module.scss
@@ -64,6 +64,14 @@
                         border-radius: 6px;
                         display: flex;
                         align-items: center;
+                        transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+                        &:hover {
+                            background: #fff;
+                            cursor: pointer;
+                            svg{
+                                color: #2c2c2c;
+                            }
+                        }
                         justify-content: center;
                     }
                 }
